alerts low priority

--- a/security.conf
+++ b/security.conf
@@ -60,7 +60,7 @@ TraceEnable Off
 # else than declared by the content type in the HTTP headers.
 # Requires mod_headers to be enabled.
 #
-#Header set X-Content-Type-Options: "nosniff"
+Header set X-Content-Type-Options: "nosniff"
 
 #
 # Setting this header will prevent other sites from embedding pages from this
@@ -68,6 +68,6 @@ TraceEnable Off
 # Requires mod_headers to be enabled.
 #
 Header set X-Frame-Options: "sameorigin"
-
-
+Header unset X-Powered-By
+Header unset Server
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
